starting to add tests

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<header class="main-header"></header>
 	<main id="app"></main>
-	<script src="dist/bark.min.js"></script>
+	<script src="./src/bark.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
