Moving example files

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header class="main-header"></header>
 	<main id="app"></main>
-	<script src="./src/bark.js"></script>
+	<script src="../src/bark.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
